<resources>
    <string name="app_name">ContactAppWorkshop</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="submit">submit</string>
    <string name="error">Error</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="require_field_name">Require field name</string>
    <string name="require_field_email">Require field email</string>
    <string name="require_field_phone_number">Require field phone number</string>
    <string name="require_field_website">Require field website</string>
    <string name="create_contact">Create Contact</string>
    <string name="empty_contact">Ohh…your contact is empty!\nPlease add new contact.</string>
    <string name="getlocation">GetLocation</string>
    <string name="btn_done">Done</string>
    <string name="btn_back">Back</string>
    <string name="add_photo">Add Photo</string>
    <string name="permission_denied">Permission denied</string>
    <string name="please_try_again">Some thing error, Please try again</string>
    <string name="cancel">CANCEL</string>
    <string name="login_email">Login</string>
    <string name="check_email">Check Email</string>
    <string name="register_error">Register Error</string>
    <string name="login_error">Login_error</string>
    <string name="check_password">Check Password</string>
    <string name="register">Register</string>
    <string name="check_RePassword">Check Re-Password</string>
    <string name="messageLogout">Would you like to logout?</string>
    <string name="detail">Web</string>
    <string name="fill_name">Name :</string>
    <string name="fill_tel">Telephone:</string>
    <string name="fill_email">E-mail:</string>
    <string name="fill_website">Website:</string>
    <string name="fill_address">Address:</string>
    <string name="facebook_app_id">1892303904114046</string>
    <string name="password">password</string>
    <string name="re_password">Re-password</string>
    <string name="submit_register">Submit</string>
    <string name="text_name">Appname</string>
</resources>
