<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.tweentyscoops.contactworkshop.ui.detail.DetailActivity">
        <ImageView
            android:id="@+id/tvEdt"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:layout_gravity="right"
            android:src="@drawable/pen_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgDetailProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@android:color/darker_gray"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fill_name"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:padding="2dp"
                android:id="@+id/tvDetailName"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fill_tel"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:padding="2dp"
                android:id="@+id/tvDetailTel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fill_email"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:padding="2dp"
                android:id="@+id/tvDetailEmail"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fill_website"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:padding="2dp"
                android:id="@+id/tvDetailWebsite"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="25sp" />
        </LinearLayout>


        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="300dp">
            <ImageView
                android:id="@+id/ivMap"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:ignore="ContentDescription" />
            <ImageView
                android:src="@drawable/marker"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="40dp"
                android:layout_height="50dp"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>